fixed incorrect caret location in text entry field with visible placeholder

--- a/static/css/expresso.css
+++ b/static/css/expresso.css
@@ -13,7 +13,6 @@ p, td {
 
 .data-text-empty:before {
     content: attr(data-placeholder);
-    float: left;
     color: #b3b3b3;
 }
 
